# caldav2ntfy

./: .flake8  .gitignore  .python-version  README.md  config.example.toml  pyproject.toml  tox.ini
.github/workflows/: main.yml
src/caldav2ntfy/: .env.example  app.py  cli.py  config.py  main.py
tests/: test_app.py  test_config_cli.py
